app/[locale]/(protected)/test/error/page.tsx
import { ErrorTestCard } from "./error-test-card";

import { CenteredCardPage } from "@/components/shared/centered-card-page";

export default function ErrorTestPage() {
  return (
    <CenteredCardPage>
      <ErrorTestCard />
    </CenteredCardPage>
  );
}
